testsuite/tests/rts/pause-resume/shouldfail/rts_pause_lock.h

void assertDoneAfterOneSecond(int * done);
void lockThenPause (int * done);
void pauseThenLock (int * done);
void doublePause (int * done);
